# OI.AI.MLEng.TakeHome

./: README.md  docker-compose.yml  pyproject.toml  tasks.py
.githooks/: pre-commit
.github/workflows/: run-tests.yml
conf/: application.yaml  tests.yaml
docker/backend/: Dockerfile
docker/grafana/: FastAPI_MetricsDashboard.json  dashboards.yml  datasource.yml
docker/prometheus/: prometheus.yml
oi/ai/mleng/takehome/backend/: api.py  frontend.py
oi/ai/mleng/takehome/config/: config.py
oi/ai/mleng/takehome/models/: resnet50.py
oi/ai/mleng/takehome/pipeline/: model.py  postprocessing.py  preprocessing.py
tests/: conftest.py
tests/system/: test_backend_api.py
tests/unit/pipeline/: test_model.py  test_postprocessing.py  test_preprocessing.py
